[metadata]
name = chemelem
author = Mariusz Radon
author_email = mariusz.radon@uj.edu.pl
description = Chemical elements with masses and radii
long_description = file: README.rst
long_description_content_type = text/x-rst

[options.data_files]
share/doc/chemelem =
    README.rst

[options.entry_points]
console_scripts =
    chemelem = chemelem:main
